@@ -1,3 +1,8 @@
+2009-04-08  Michael Banck  <mbanck@gmx.net>
+
+	* src/formats/gaussformat.cpp (ReadMolecule): Adjust normal modes
+	parsing when Raman intensities are present.  Fixes PR#2728543.
+
 2009-04-07  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* src/formats/smilesformat.cpp: Fix compile error. Make sure to
